# qc-openmaterial-3d

./: .gitignore  README.md  checker_bundle_doc.md  example_config.xml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: test.yml
manifest_templates/: linux_openmaterial_manifest.json  linux_xosc_manifest.json  windows_openmaterial_manifest.json  windows_xosc_manifest.json
qc_openmaterial/: __main__.py  basic_preconditions.py  constants.py  main.py
qc_openmaterial/checks/: models.py  utils.py
qc_openmaterial/checks/basic_checker/: valid_json_document.py  version_is_defined.py
qc_openmaterial/checks/schema_checker/: valid_schema.py
qc_openmaterial/schemas/: schema_files.py
qc_openmaterial3d/: __main__.py  basic_preconditions.py  constants.py  main.py
qc_openmaterial3d/checks/: __init__.py  models.py  utils.py
qc_openmaterial3d/checks/basic_checker/: __init__.py  valid_json_document.py  version_is_defined.py
qc_openmaterial3d/checks/schema_checker/: valid_schema.py
qc_openmaterial3d/checks/xom_general_checker/: __init__.py  general_uris_exist.py  general_valid_json_document.py  general_valid_schema.py  general_version_is_defined.py  xoma_material_textures_exist.py
qc_openmaterial3d/schemas/: schema_files.py
tests/: bundle_config.xml  test_basic_checks.py  test_data_type_checks.py  test_main_executor.py  test_parameters_checks.py  test_reference_checks.py  test_schema_checks.py  test_utils.py  test_xom_general_checks.py  test_xom_geo_checks.py
(+29 files in other folders)
